More copyright changes to Kevin A. Mitchell.

--- a/English.lproj/InfoPlist.strings
+++ b/English.lproj/InfoPlist.strings
@@ -1,3 +1,3 @@
 /* Localized versions of Info.plist keys */
 
-NSHumanReadableCopyright = "Copyright (c) 2007, __MyCompanyName__.";
+NSHumanReadableCopyright = "Copyright (c) 2007, Kevin A. Mitchell.";
